# f5-google-nginx-custom-images

./: .gitignore  .pre-commit-config.yaml  .talismanrc  .yamllint.yml  LICENSE  README.md  main.pkr.hcl  nginx-runtime.pkr.hcl  nginx-static.pkr.hcl  pyproject.toml  release-please-config.json  variables.pkr.hcl
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  release-please.yml
files/: README.md  install-nginx-agent.sh  provisioner.sh
templates/: README.md  static-configuration.sh
test/: README.md  conftest.py  main.tf  nginx.tf  outputs.tf  packer.tf  terraform.tfvars.example  test_custom_images.py  test_nginx_api_disabled_nginx_one_disabled.py  test_nginx_api_disabled_nginx_one_enabled.py  test_nginx_api_enabled_nginx_one_disabled.py  test_nginx_api_enabled_nginx_one_enabled.py  variables.tf
test/fixture/: README.md  main.tf  variables.tf
test/fixture/templates/: cloud-config-api-only.yaml  cloud-config-both.yaml  cloud-config-no-api.yaml
